--- a/beapi.tex
+++ b/beapi.tex
@@ -1,7 +1,9 @@
-\chapter[Generacion Exhaustiva acotada desde API de los programas (FASE 23)]{Generacion Exhaustiva acotada desde API de los programas (FASE 23)}
+\chapter*{Generacion Exhaustiva acotada desde API de los programas (FASE 23)}
+
+
 \label{cap:beapi}
 
-En adelante, se presenta la técnica principal propuesta llamada BEAPI, que tiene como objetivo mejorar la generación exhaustiva acotada (BEG, por sus siglas en inglés, \emph{Bounded Exhaustive Generation}). Este capítulo está organizado de la siguiente manera: en la Sección \ref{sec:motivation}, se presenta un ejemplo que ilustra el problema que se aborda con la técnica propuesta, la cual se explica en la Sección \ref{sec:beapiTecnique}. Luego, en las Secciones \ref{sec:scope}, \ref{sec:stateMatching} y \ref{sec:builders}, se describen las optimizaciones implementadas en BEAPI.
+En adelante, se presenta la técnica  desarrollada llamada BEAPI, que tiene como objetivo mejorar la generación exhaustiva acotada (BEG, por sus siglas en inglés, \emph{Bounded Exhaustive Generation}). Este capítulo está organizado de la siguiente manera: en la Sección \ref{sec:motivation}, se presenta un ejemplo que ilustra el problema que se aborda con la técnica propuesta, la cual se explica en la Sección \ref{sec:beapiTecnique}. Luego, en las Secciones \ref{sec:scope}, \ref{sec:stateMatching} y \ref{sec:builders}, se describen las optimizaciones implementadas en BEAPI.
 
 
 \section[Motivation]{motivation}
