--- a/introduccion.tex
+++ b/introduccion.tex
@@ -1,5 +1,6 @@
-\chapter{Introducci\'on}
+\chapter{Introducción}
 \label{cap:introduccion}
+
 
 A medida que el software se está volviendo más ubicuo gracias a los rápidos avances en tecnología, garantizar la corrección funcional del software es más crucial que nunca. Sin embargo, a menudo sucede que se lanza software defectuoso al mercado, lo que causa al menos inconvenientes a los usuarios finales. Para abordar este problema, un área de investigación de creciente importancia es la del análisis de software automatizado, cuyo objetivo es ayudar a los ingenieros, a través de la provisión de herramientas para el análisis automatizado, a encontrar deficiencias tanto en el software como en los modelos relacionados con el software. La generación automatizada de pruebas [TODO], la verificación de modelos de software [TODO] y los análisis estáticos [TODO], entre muchos otros, son enfoques destacados en esta línea de investigación.
 
