--- a/titlepage-famaf.tex
+++ b/titlepage-famaf.tex
@@ -2,7 +2,7 @@
 \begin{titlepage}
 
 \begin{center}
-{\LARGE \textbf{Mejoras en la eficiencia de Generaci\'on Exahustiva Acotada'}}\\ 
+{\LARGE \textbf{Generación eficiente de entradas exhaustivas acotadas basada en la API sin la necesidad de especificaciones}}\\ 
 \vspace{4mm}
 {\Large por Mariano Politano}\\
 
@@ -17,7 +17,11 @@ Doctor en Ciencias de la Computaci\'on de la\\
 
 Agosto, 2023\\
 @FaMAF - UNC 2023\\
+
 {\Large Director: Pablo Daniel Ponzio}
+\\
+{\Large Co-Director: Germán Enrique Regis}
+
 
 \vspace{10mm}
 \href{https://licensebuttons.net/l/by-nc-sa/4.0/88x31.png}{\includegraphics{images/licencia-famaf.png}}\\
