--- a/Bibliografia.bib
+++ b/Bibliografia.bib
@@ -1,5 +1,649 @@
 % Encoding: UTF-8
 
+@inproceedings{Abad:2013,
+	Author = {Pablo Abad and Nazareno Aguirre and Valeria S. Bengolea and Daniel Ciolek and Marcelo F. Frias and Juan P. Galeotti and Tom Maibaum and Mariano M. Moscato and Nicol{\'{a}}s Rosner and Ignacio Vissani},
+	Bibsource = {},
+	Biburl = {},
+	Booktitle = {Sixth {IEEE} International Conference on Software Testing, Verification and Validation, {ICST} 2013, Luxembourg, Luxembourg, March 18-22, 2013},
+	Doi = {},
+	Pages = {21--30},
+	Timestamp = {Wed, 24 May 2017 08:30:37 +0200},
+	Title = {Improving Test Generation under Rich Contracts by Tight Bounds and Incremental {SAT} Solving},
+	Url = {},
+	Year = {2013},
+}
+
+
+
+
+@misc{reppack,
+	Date-Added = {2018-11-20 05:43:45 +0000},
+	Date-Modified = {2018-11-20 05:48:40 +0000},
+    Author = {Pablo Ponzio and Valeria S. Bengolea and Mariano Politano and Nazareno Aguirre and Marcelo F. Frias},
+	Title = {Replication package of the article: {Automatically Identifying Sufficient Object Builders from Module APIs}},
+	Howpublished = {\url{https://sites.google.com/view/objectbuildergeneration/}}
+}
+
+
+@article{sir,
+ author = {Do, Hyunsook and Elbaum, Sebastian and Rothermel, Gregg},
+ title = {Supporting Controlled Experimentation with Testing Techniques: An Infrastructure and Its Potential Impact},
+ journal = {Empirical Softw. Engg.},
+ issue_date = {October   2005},
+ volume = {10},
+ number = {4},
+ month = oct,
+ year = {2005},
+ issn = {1382-3256},
+ pages = {405--435},
+ numpages = {31},
+ url = {},
+ doi = {},
+ acmid = {1089928},
+ publisher = {Kluwer Academic Publishers},
+ address = {Hingham, MA, USA},
+ keywords = {Software testing, controlled experimentation, experiment infrastructure, regression testing},
+} 
+
+@inproceedings{sat4j,
+	Author = {Daniel Le Berre and Anne Parrain},
+	title = {The {Sat4j} library, release 2.2},
+	Bibsource = {},
+	Biburl = {},
+	Booktitle = {Journal on Satisfiability, Boolean Modeling and Computation, Volume 7, system description},
+	Doi = {},
+	Pages = {59--64},
+	Url = {},
+	Year = {2010},
+}
+
+@misc{apache,
+	Date-Added = {2018-11-20 04:22:28 +0000},
+	Date-Modified = {2018-11-20 04:27:36 +0000},
+    key = {Website of the {Apache Collections} library},
+	Howpublished = {\url{https://commons.apache.org/proper/commons-collections/}},
+	Title = {Website of the {Apache Collections} library}}
+
+@misc{jgrapht,
+	Date-Added = {2018-11-20 04:12:21 +0000},
+	Date-Modified = {2018-11-20 04:28:28 +0000},
+	Howpublished = {\url{https://jgrapht.org/}},
+	Title = {Website of the {JGrapht} library},
+    key = {Website of the {JGrapht} library}
+}
+
+@inproceedings{Loncaric:2018,
+	Author = {Calvin Loncaric and Michael D. Ernst and Emina Torlak},
+	Bibsource = {},
+	Biburl = {},
+	Booktitle = {Proceedings of the 40th International Conference on Software Engineering, {ICSE} 2018, Gothenburg, Sweden, May 27 - June 03, 2018},
+	Date-Added = {2018-11-20 04:07:10 +0000},
+	Date-Modified = {2018-11-20 04:11:29 +0000},
+	Doi = {},
+	Pages = {958--968},
+	Timestamp = {Thu, 06 Sep 2018 11:47:58 +0200},
+	Title = {Generalized data structure synthesis},
+	Url = {},
+	Year = {2018},
+}
+
+@inproceedings{Sharma:2011,
+	Abstract = {Container classes such as lists, sets, or maps are elementary data structures common to many programming languages. Since they are a part of standard libraries, they are important to test, which led to research on advanced testing techniques targeting such containers and research on comparing testing techniques using such containers. However, these techniques have not been thoroughly compared to simpler techniques such as random testing. We present the results of a larger case study in which we compare random testing with shape abstraction, a systematic technique that showed the best results in a previous study. Our experiments show that random testing is about as effective as shape abstraction for testing these containers, which raises the question whether containers are well suited as a benchmark for comparing advanced testing techniques.},
+	Address = {Berlin, Heidelberg},
+	Author = {Sharma, Rohan and Gligoric, Milos and Arcuri, Andrea and Fraser, Gordon and Marinov, Darko},
+	Booktitle = {Fundamental Approaches to Software Engineering},
+	Editor = {},
+	Isbn = {978-3-642-19811-3},
+	Pages = {262--277},
+	Publisher = {Springer Berlin Heidelberg},
+	Title = {Testing Container Classes: Random or Systematic?},
+	Year = {2011}}
+
+@book{dejong2006evolutionary,
+  author    = {De Jong, Kenneth A.},
+  title     = {Evolutionary Computation: A Unified Approach},
+  year      = {2006},
+  publisher = {MIT Press},
+  address   = {Cambridge, MA},
+}
+
+
+@inproceedings{Ponzio:2018,
+	Acmid = {3194724},
+	Address = {New York, NY, USA},
+	Author = {Ponzio, Pablo and Bengolea, Valeria and Brida, Sim\'{o}n Guti{\'e}rrez and Scilingo, Gast\'{o}n and Aguirre, Nazareno and Frias, Marcelo},
+	Booktitle = {Proceedings of the 11th International Workshop on Search-Based Software Testing},
+	Doi = {},
+	Isbn = {978-1-4503-5741-8},
+	Location = {Gothenburg, Sweden},
+	Numpages = {4},
+	Pages = {67--70},
+	Publisher = {ACM},
+	Series = {SBST '18},
+	Title = {On the Effect of Object Redundancy Elimination in Randomly Testing Collection Classes},
+	Url = {},
+	Year = {2018},
+}
+
+@inproceedings{Ponzio:2016,
+	Acmid = {2950336},
+	Address = {New York, NY, USA},
+	Author = {Ponzio, Pablo and Aguirre, Nazareno and Frias, Marcelo F. and Visser, Willem},
+	Booktitle = {Proceedings of the 2016 24th ACM SIGSOFT International Symposium on Foundations of Software Engineering},
+	Doi = {},
+	Isbn = {978-1-4503-4218-6},
+	Keywords = {Automated Test Generation, SAT Solving, Software Testing},
+	Location = {Seattle, WA, USA},
+	Numpages = {12},
+	Pages = {908--919},
+	Publisher = {ACM},
+	Series = {FSE 2016},
+	Title = {Field-exhaustive Testing},
+	Url = {},
+	Year = {2016},
+}
+
+@inproceedings{Fraser:2011,
+	Acmid = {2025179},
+	Address = {New York, NY, USA},
+	Author = {Fraser, Gordon and Arcuri, Andrea},
+	Booktitle = {Proceedings of the 19th ACM SIGSOFT Symposium and the 13th European Conference on Foundations of Software Engineering},
+	Doi = {},
+	Isbn = {978-1-4503-0443-6},
+	Keywords = {assertion generation, search based soft- ware testing, test case generation},
+	Location = {Szeged, Hungary},
+	Numpages = {4},
+	Pages = {416--419},
+	Publisher = {ACM},
+	Series = {ESEC/FSE '11},
+	Title = {EvoSuite: Automatic Test Suite Generation for Object-oriented Software},
+	Url = {},
+	Year = {2011},
+}
+
+@inproceedings{Galeotti:2010,
+	Acmid = {1831712},
+	Address = {New York, NY, USA},
+	Author = {Galeotti, Juan Pablo and Rosner, Nicol\'{a}s and L\'{o}pez Pombo, Carlos Gustavo and Frias, Marcelo Fabian},
+	Booktitle = {Proceedings of the 19th International Symposium on Software Testing and Analysis},
+	Doi = {},
+	Isbn = {978-1-60558-823-0},
+	Keywords = {alloy, dynalloy, kodkod, sat-based code analysis, static analysis},
+	Location = {Trento, Italy},
+	Numpages = {12},
+	Pages = {25--36},
+	Publisher = {ACM},
+	Series = {ISSTA '10},
+	Title = {Analysis of Invariants for Efficient Bounded Verification},
+	Url = {},
+	Year = {2010},
+}
+
+@inproceedings{Tillmann:2010,
+	Acmid = {1810441},
+	Address = {New York, NY, USA},
+	Author = {Tillmann, Nikolai and de Halleux, Jonathan and Xie, Tao},
+	Booktitle = {Proceedings of the 32Nd ACM/IEEE International Conference on Software Engineering - Volume 2},
+	Doi = {},
+	Isbn = {978-1-60558-719-6},
+	Keywords = {Pex, mock objects, parameterized unit testing, symbolic execution, testing, theories, unit testing},
+	Location = {Cape Town, South Africa},
+	Numpages = {2},
+	Pages = {483--484},
+	Publisher = {ACM},
+	Series = {ICSE '10},
+	Title = {Parameterized Unit Testing: Theory and Practice},
+	Url = {},
+	Year = {2010},
+}
+
+@inproceedings{Khalek:2011,
+	Acmid = {2190145},
+	Address = {Washington, DC, USA},
+	Author = {Khalek, Shadi Abdul and Guowei Yang and Lingming Zhang and Marinov, Darko and Khurshid, Sarfraz},
+	Booktitle = {Proceedings of the 2011 26th IEEE/ACM International Conference on Automated Software Engineering},
+	Doi = {},
+	Isbn = {978-1-4577-1638-6},
+	Numpages = {4},
+	Pages = {608--611},
+	Publisher = {IEEE Computer Society},
+	Series = {ASE '11},
+	Title = {TestEra: A Tool for Testing Java Programs Using Alloy Specifications},
+	Url = {},
+	Year = {2011},
+}
+
+@inproceedings{Tillmann:2008,
+	Acmid = {1792798},
+	Address = {Berlin, Heidelberg},
+	Author = {Tillmann, Nikolai and De Halleux, Jonathan},
+	Booktitle = {Proceedings of the 2Nd International Conference on Tests and Proofs},
+	Isbn = {3-540-79123-X, 978-3-540-79123-2},
+	Location = {Prato, Italy},
+	Numpages = {20},
+	Pages = {134--153},
+	Publisher = {Springer-Verlag},
+	Series = {TAP'08},
+	Title = {Pex: White Box Test Generation for .NET},
+	Url = {},
+	Year = {2008},
+}
+
+@inproceedings{Pacheco:2007,
+	Acmid = {1297902},
+	Address = {New York, NY, USA},
+	Author = {Pacheco, Carlos and Ernst, Michael D.},
+	Booktitle = {Companion to the 22Nd ACM SIGPLAN Conference on Object-oriented Programming Systems and Applications Companion},
+	Doi = {},
+	Isbn = {978-1-59593-865-7},
+	Keywords = {Java, automatic test generation, random testing},
+	Location = {Montreal, Quebec, Canada},
+	Numpages = {2},
+	Pages = {815--816},
+	Publisher = {ACM},
+	Series = {OOPSLA '07},
+	Title = {Randoop: Feedback-directed Random Testing for Java},
+	Url = {},
+	Year = {2007},
+}
+
+@inproceedings{Visser:2006,
+	Acmid = {1146243},
+	Address = {New York, NY, USA},
+	Author = {Visser, Willem and P\v{a}s\v{a}reanu, Corina S. and Pel\'{a}nek, Radek},
+	Booktitle = {Proceedings of the 2006 International Symposium on Software Testing and Analysis},
+	Doi = {},
+	Isbn = {1-59593-263-1},
+	Location = {Portland, Maine, USA},
+	Numpages = {12},
+	Pages = {37--48},
+	Publisher = {ACM},
+	Series = {ISSTA '06},
+	Title = {Test Input Generation for Java Containers Using State Matching},
+	Url = {},
+	Year = {2006},
+}
+
+@inproceedings{Gligoric:2010,
+	Acmid = {1806835},
+	Address = {New York, NY, USA},
+	Author = {Gligoric, Milos and Gvero, Tihomir and Jagannath, Vilas and Khurshid, Sarfraz and Kuncak, Viktor and Marinov, Darko},
+	Booktitle = {Proceedings of the 32Nd ACM/IEEE International Conference on Software Engineering - Volume 1},
+	Doi = {},
+	Isbn = {978-1-60558-719-6},
+	Keywords = {Java PathFinder, Pex, UDITA, automated testing, test filtering, test generation, test predicates, test programs},
+	Location = {Cape Town, South Africa},
+	Numpages = {10},
+	Pages = {225--234},
+	Publisher = {ACM},
+	Series = {ICSE '10},
+	Title = {Test Generation Through Programming in UDITA},
+	Url = {},
+	Year = {2010},
+}
+
+@inproceedings{Visser:2005,
+	Acmid = {2156349},
+	Address = {Berlin, Heidelberg},
+	Author = {Visser, Willem and Mehlitz, Peter},
+	Booktitle = {Proceedings of the 12th International Conference on Model Checking Software},
+	Doi = {},
+	Isbn = {3-540-28195-9, 978-3-540-28195-5},
+	Location = {San Francisco, CA},
+	Numpages = {1},
+	Pages = {27--27},
+	Publisher = {Springer-Verlag},
+	Series = {SPIN'05},
+	Title = {Model Checking Programs with Java Pathfinder},
+	Url = {},
+	Year = {2005},
+}
+
+@inproceedings{Pasareanu:2010,
+	Acmid = {1859035},
+	Address = {New York, NY, USA},
+	Author = {P\u{a}s\u{a}reanu, Corina S. and Rungta, Neha},
+	Booktitle = {Proceedings of the IEEE/ACM International Conference on Automated Software Engineering},
+	Doi = {},
+	Isbn = {978-1-4503-0116-9},
+	Keywords = {automated test case generation, program analysis},
+	Location = {Antwerp, Belgium},
+	Numpages = {2},
+	Pages = {179--180},
+	Publisher = {ACM},
+	Series = {ASE '10},
+	Title = {Symbolic PathFinder: Symbolic Execution of Java Bytecode},
+	Url = {},
+	Year = {2010},
+}
+
+@article{Rosner:2015,
+	Author = {Nicol{\'{a}}s Rosner and Jaco Geldenhuys and Nazareno Aguirre and Willem Visser and Marcelo F. Frias},
+	Journal = {{IEEE} Trans. Software Eng.},
+	Number = {7},
+	Pages = {639--660},
+	Title = {{BLISS:} Improved Symbolic Execution by Bounded Lazy Initialization with {SAT} Support},
+	Volume = {41},
+	Year = {2015}}
+
+@article{Calcagno:2011,
+	Acmid = {2049700},
+	Address = {New York, NY, USA},
+	Articleno = {26},
+	Author = {Calcagno, Cristiano and Distefano, Dino and O'Hearn, Peter W. and Yang, Hongseok},
+	Doi = {},
+	Issn = {0004-5411},
+	Issue_Date = {December 2011},
+	Journal = {J. ACM},
+	Keywords = {Abstract interpretation, compositionality, program proving, separation logic, static analysis},
+	Month = dec,
+	Number = {6},
+	Numpages = {66},
+	Pages = {26:1--26:66},
+	Publisher = {ACM},
+	Title = {Compositional Shape Analysis by Means of Bi-Abduction},
+	Url = {},
+	Volume = {58},
+	Year = {2011},
+}
+
+@inproceedings{Itzhaky:2014,
+	Acmid = {2735054},
+	Address = {Berlin, Heidelberg},
+	Author = {Itzhaky, Shachar and Bjorner, Nikolaj and Reps, Thomas and Sagiv, Mooly and Thakur, Aditya},
+	Booktitle = {Proceedings of the 16th International Conference on Computer Aided Verification - Volume 8559},
+	Doi = {},
+	Isbn = {978-3-319-08866-2},
+	Numpages = {17},
+	Pages = {35--51},
+	Publisher = {Springer-Verlag},
+	Title = {Property-Directed Shape Analysis},
+	Url = {},
+	Year = {2014},
+}
+
+@inproceedings{Clarke:2004,
+	Author = {Clarke, Edmund and Kroening, Daniel and Lerda, Flavio},
+	Booktitle = {Tools and Algorithms for the Construction and Analysis of Systems (TACAS 2004)},
+	Editor = {},
+	Isbn = {3-540-21299-X},
+	Pages = {168--176},
+	Publisher = {Springer},
+	Series = {Lecture Notes in Computer Science},
+	Title = {A Tool for Checking {ANSI-C} Programs},
+	Volume = {2988},
+	Year = {2004}}
+
+@inproceedings{Ciupa:2008,
+	Acmid = {1368099},
+	Address = {New York, NY, USA},
+	Author = {Ciupa, Ilinca and Leitner, Andreas and Oriol, Manuel and Meyer, Bertrand},
+	Booktitle = {Proceedings of the 30th International Conference on Software Engineering},
+	Doi = {},
+	Isbn = {978-1-60558-079-1},
+	Keywords = {adaptive random testing, object distance, software testing},
+	Location = {Leipzig, Germany},
+	Numpages = {10},
+	Pages = {71--80},
+	Publisher = {ACM},
+	Series = {ICSE '08},
+	Title = {ARTOO: Adaptive Random Testing for Object-oriented Software},
+	Url = {},
+	Year = {2008}
+}
+
+@inproceedings{Claessen:2000,
+	Acmid = {351266},
+	Address = {New York, NY, USA},
+	Author = {Claessen, Koen and Hughes, John},
+	Booktitle = {Proceedings of the Fifth ACM SIGPLAN International Conference on Functional Programming},
+	Doi = {},
+	Isbn = {1-58113-202-6},
+	Numpages = {12},
+	Pages = {268--279},
+	Publisher = {ACM},
+	Series = {ICFP '00},
+	Title = {QuickCheck: A Lightweight Tool for Random Testing of Haskell Programs},
+	Url = {},
+	Year = {2000},
+}
+
+@inproceedings{Meyer:2007,
+	Address = {Berlin, Heidelberg},
+	Author = {Meyer, Bertrand and Ciupa, Ilinca and Leitner, Andreas and Liu, Lisa Ling},
+	Booktitle = {SOFSEM 2007: Theory and Practice of Computer Science},
+	Editor = {},
+	Isbn = {978-3-540-69507-3},
+	Pages = {114--129},
+	Publisher = {Springer Berlin Heidelberg},
+	Title = {Automatic Testing of Object-Oriented Software},
+	Year = {2007}}
+
+@Misc{jgap,
+  title         = {Website of the {Java Genetic Algorithms Package}},
+  key = {Website of the {Java Genetic Algorithms Package}},
+  howpublished  = {\url{http://jgap.sourceforge.net}},
+  date-added    = {2018-11-20 04:22:28 +0000},
+  date-modified = {2018-11-20 04:27:36 +0000},
+}
+
+@InProceedings{Huang:2012,
+  author    = {Huang, Wei and Milanova, Ana and Dietl, Werner and Ernst, Michael D.},
+  title     = {Reim \& ReImInfer: Checking and Inference of Reference Immutability and Method Purity},
+  booktitle = {Proceedings of the ACM International Conference on Object Oriented Programming Systems Languages and Applications},
+  year      = {2012},
+  series    = {OOPSLA '12},
+  pages     = {879--896},
+  address   = {New York, NY, USA},
+  publisher = {ACM},
+  acmid     = {2384680},
+  doi       = {},
+  isbn      = {978-1-4503-1561-6},
+  keywords  = {inference, method purity, reference immutability, type system},
+  location  = {Tucson, Arizona, USA},
+  numpages  = {18},
+  url       = {},
+}
+
+@InProceedings{Salcianu:2005,
+  author    = {S\u{a}lcianu, Alexandru and Rinard, Martin},
+  title     = {Purity and Side Effect Analysis for Java Programs},
+  booktitle = {Proceedings of the 6th International Conference on Verification, Model Checking, and Abstract Interpretation},
+  year      = {2005},
+  series    = {VMCAI'05},
+  pages     = {199--215},
+  address   = {Berlin, Heidelberg},
+  publisher = {Springer-Verlag},
+  acmid     = {2131773},
+  doi       = {},
+  isbn      = {3-540-24297-X, 978-3-540-24297-0},
+  location  = {Paris, France},
+  numpages  = {17},
+  url       = {},
+}
+
+@Book{Goldberg:1989,
+  title     = {Genetic Algorithms in Search, Optimization and Machine Learning},
+  publisher = {Addison-Wesley Longman Publishing Co., Inc.},
+  year      = {1989},
+  author    = {Goldberg, David E.},
+  address   = {Boston, MA, USA},
+  edition   = {1st},
+  isbn      = {0201157675},
+}
+
+@Book{Russell:2009,
+  title     = {Artificial Intelligence: A Modern Approach},
+  publisher = {Prentice Hall Press},
+  year      = {2009},
+  author    = {Russell, Stuart and Norvig, Peter},
+  address   = {Upper Saddle River, NJ, USA},
+  edition   = {3rd},
+  isbn      = {0136042597, 9780136042594},
+}
+
+@Book{Michalewicz:1996,
+  title     = {Genetic Algorithms + Data Structures = Evolution Programs (3rd Ed.)},
+  publisher = {Springer-Verlag},
+  year      = {1996},
+  author    = {Michalewicz, Zbigniew},
+  address   = {Berlin, Heidelberg},
+  isbn      = {3-540-60676-9},
+}
+
+@TechReport{Andoni:2003,
+  author = {Alexandr Andoni and Dumitru Daniliuc and Sarfraz Khurshid},
+  title  = {Evaluating the Small Scope Hypothesis},
+  institution = {MIT Laboratory for Computer Science},
+  year   = {2003}
+}
+
+@InProceedings{Boyapati:2002,
+  author    = {Boyapati, Chandrasekhar and Khurshid, Sarfraz and Marinov, Darko},
+  title     = {Korat: Automated Testing Based on Java Predicates},
+  booktitle = {Proceedings of the 2002 ACM SIGSOFT International Symposium on Software Testing and Analysis},
+  year      = {2002},
+  series    = {ISSTA '02},
+  pages     = {123--133},
+  address   = {New York, NY, USA},
+  publisher = {ACM},
+  acmid     = {566191},
+  doi       = {},
+  isbn      = {1-58113-562-9},
+  location  = {Roma, Italy},
+  numpages  = {11},
+  url       = {},
+}
+
+@inproceedings{DBLP:conf/tacas/NoriRTT09,
+  author    = {Aditya V. Nori and
+               Sriram K. Rajamani and
+               SaiDeep Tetali and
+               Aditya V. Thakur},
+  title     = {The YogiProject: Software Property Checking via Static Analysis and
+               Testing},
+  booktitle = {Tools and Algorithms for the Construction and Analysis of Systems,
+               15th International Conference, {TACAS} 2009, Held as Part of the Joint
+               European Conferences on Theory and Practice of Software, {ETAPS} 2009,
+               York, UK, March 22-29, 2009. Proceedings},
+  pages     = {178--181},
+  year      = {2009},
+  crossref  = {DBLP:conf/tacas/2009},
+  url       = {},
+  doi       = {},
+  timestamp = {Tue, 26 Jun 2018 14:11:56 +0200},
+  biburl    = {},
+  bibsource = {}
+}
+
+@proceedings{DBLP:conf/tacas/2009,
+  editor    = {},
+  title     = {Tools and Algorithms for the Construction and Analysis of Systems,
+               15th International Conference, {TACAS} 2009, Held as Part of the Joint
+               European Conferences on Theory and Practice of Software, {ETAPS} 2009,
+               York, UK, March 22-29, 2009. Proceedings},
+  series    = {Lecture Notes in Computer Science},
+  volume    = {5505},
+  publisher = {Springer},
+  year      = {2009},
+  url       = {},
+  doi       = {},
+  isbn      = {978-3-642-00767-5},
+  timestamp = {Wed, 24 May 2017 08:28:32 +0200},
+  biburl    = {},
+  bibsource = {}
+}
+
+@inproceedings{DBLP:conf/tacas/KhurshidPV03,
+  author    = {Sarfraz Khurshid and
+               Corina S. Pasareanu and
+               Willem Visser},
+  title     = {Generalized Symbolic Execution for Model Checking and Testing},
+  booktitle = {Tools and Algorithms for the Construction and Analysis of Systems,
+               9th International Conference, {TACAS} 2003, Held as Part of the Joint
+               European Conferences on Theory and Practice of Software, {ETAPS} 2003,
+               Warsaw, Poland, April 7-11, 2003, Proceedings},
+  pages     = {553--568},
+  year      = {2003},
+  crossref  = {DBLP:conf/tacas/2003},
+  url       = {},
+  doi       = {},
+  timestamp = {Mon, 29 May 2017 16:53:44 +0200},
+  biburl    = {},
+  bibsource = {}
+}
+
+@proceedings{DBLP:conf/tacas/2003,
+  editor    = {},
+  title     = {Tools and Algorithms for the Construction and Analysis of Systems,
+               9th International Conference, {TACAS} 2003, Held as Part of the Joint
+               European Conferences on Theory and Practice of Software, {ETAPS} 2003,
+               Warsaw, Poland, April 7-11, 2003, Proceedings},
+  series    = {Lecture Notes in Computer Science},
+  volume    = {2619},
+  publisher = {Springer},
+  year      = {2003},
+  url       = {},
+  doi       = {},
+  isbn      = {3-540-00898-5},
+  timestamp = {Mon, 29 May 2017 16:53:44 +0200},
+  biburl    = {},
+  bibsource = {}
+}
+
+@inproceedings{DBLP:conf/icse/BraioneDMP18,
+  author    = {Pietro Braione and
+               Giovanni Denaro and
+               Andrea Mattavelli and
+               Mauro Pezz{\`{e}}},
+  title     = {{SUSHI:} a test generator for programs with complex structured inputs},
+  booktitle = {Proceedings of the 40th International Conference on Software Engineering:
+               Companion Proceeedings, {ICSE} 2018, Gothenburg, Sweden, May 27 -
+               June 03, 2018},
+  pages     = {21--24},
+  year      = {2018},
+  crossref  = {DBLP:conf/icse/2018c},
+  url       = {},
+  doi       = {},
+  timestamp = {Tue, 04 Sep 2018 11:30:50 +0200},
+  biburl    = {},
+  bibsource = {}
+}
+
+@proceedings{DBLP:conf/icse/2018c,
+  editor    = {},
+  title     = {Proceedings of the 40th International Conference on Software Engineering:
+               Companion Proceeedings, {ICSE} 2018, Gothenburg, Sweden, May 27 -
+               June 03, 2018},
+  publisher = {{ACM}},
+  year      = {2018},
+  url       = {},
+  isbn      = {978-1-4503-5663-3},
+  timestamp = {Tue, 04 Sep 2018 11:30:50 +0200},
+  biburl    = {},
+  bibsource = {}
+}
+
+@article{DBLP:journals/tse/GouesNFW12,
+  author    = {Claire {Le Goues} and
+               ThanhVu Nguyen and
+               Stephanie Forrest and
+               Westley Weimer},
+  title     = {GenProg: {A} Generic Method for Automatic Software Repair},
+  journal   = {{IEEE} Trans. Software Eng.},
+  volume    = {38},
+  number    = {1},
+  pages     = {54--72},
+  year      = {2012},
+  url       = {},
+  doi       = {},
+  timestamp = {Wed, 17 May 2017 10:56:36 +0200},
+  biburl    = {},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+
+@Comment{jabref-meta: databaseType:bibtex;}
 
 
 @misc{artifact,
